--- a/style.css
+++ b/style.css
@@ -70,6 +70,12 @@ body {
   position: absolute;
   top: 40vh;
   left: 10%;
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.title h1 {
   font-size: 72px;
   color: white;
   font-family: "norwester";
@@ -146,15 +152,7 @@ main {
 /* MAIN INICIO */
 
 .mainInicio {
-  width: 90%;
-}
-
-.descripcionInicio {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
+  width: 90vw;
 }
 
 .logo {
@@ -162,12 +160,13 @@ main {
   height: 200px;
   object-fit: contain;
   background-color: black;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .parrafo {
-  width: 70%;
+  height: 100%;
   font-size: 20px;
-  margin: 20px 20px 20px 0px;
 }
 
 .parrafo h3 {
@@ -187,7 +186,7 @@ main {
   margin: 60px;
 }
 
-#mainFotografia {
+.infoFotografia {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -195,8 +194,11 @@ main {
 }
 
 .fotografiaImg {
-  height: 90vh;
+  width: 90%;
+  height: auto;
+  max-height: 90vh;
   object-fit: contain;
+  margin: 25px;
 }
 
 .tarjetaProd {
@@ -302,19 +304,20 @@ p {
 
 /* MAIN FOTOGRAFIA */
 
-.mainFot {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
+.mainAcerca {
+  width: 90vw;
 }
 
-.mainFot img {
-  margin: 30px 0px;
+.imgAcercaContainer img {
+  width: 200px;
+  height: 220px;
+  margin-right: 20px;
+  padding-top: 20px;
 }
 
-.mainFot p {
+.mainAcerca p {
+  height: 100%;
   font-size: 20px;
-  margin: 0px 0px 60px 0px;
 }
 
 /* FOOTER */
